<resources>
    <string name="app_name">Paper Tracker</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="expand">Expand</string>
    <string name="delete_doc">Delete Document</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="new_document">Document</string>
    <string name="warning">Warning</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
</resources>
